WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
98219
[chromium] Fix spelling of isNVIDIA override in Extensions3DChromium
https://bugs.webkit.org/show_bug.cgi?id=98219
Summary
[chromium] Fix spelling of isNVIDIA override in Extensions3DChromium
vollick
Reported
2012-10-02 17:45:23 PDT
Needs to match definition in Extensions3d.h
Attachments
Patch
(1.50 KB, patch)
2012-10-02 17:50 PDT
,
vollick
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
vollick
Comment 1
2012-10-02 17:50:13 PDT
Created
attachment 166788
[details]
Patch
Ojan Vafai
Comment 2
2012-10-02 18:08:43 PDT
Comment on
attachment 166788
[details]
Patch Clearing flags on attachment: 166788 Committed
r130241
: <
http://trac.webkit.org/changeset/130241
>
Ojan Vafai
Comment 3
2012-10-02 18:08:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug