[chromium] Fix spelling of isNVIDIA override in Extensions3DChromium https://bugs.webkit.org/show_bug.cgi?id=98219

Patch by Ian Vollick <vollick@chromium.org> on 2012-10-02
Reviewed by Dean Jackson.

The override in Extensions3dChromium should have been spelled isNVIDIA, not isNVidia.

No new tests. No change in functionality.

* platform/graphics/chromium/Extensions3DChromium.h:
(WebCore::Extensions3DChromium::isNVIDIA):

Canonical link: https://commits.webkit.org/116239@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130241 268f45cc-cd09-0410-ab3c-d52691b4dbfc